# dict-trie

./: README.rst  setup.cfg
assets/: alphabet.csv  chars.csv
dict_trie/: dict_trie.py
dict_trie_persian/: __init__.py  dict_trie_persian.py
dict_trie_persian.egg-info/: .gitignore
