[metadata]
name = dict-trie-persian
version = 1.0.0
description = Trie implementation for approximate string matching.
long_description = file: README.rst
author = Pourya Jafarzadeh
author_email = pouryajafarzadeh@gmail.com
url = http://dict-trie.readthedocs.io/en/latest/
keywords = bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
tests_require =
    fake-open==0.0.1
    pytest==4.0.1
